# attack-path-sim

./: README.md  pyproject.toml
examples/: prototype_device.yaml
src/attack_path_sim/: __init__.py  analysis.py  cli.py  graph.py  io.py  risk_model.py  scenario.py  simulator.py
src/attack_path_sim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_mvp.py
